# Thread

./: .gitignore  CMakeLists.txt
Example/: Example.cpp
Example/Settings/: Settings.cpp  Settings.h
Example/Tasks/: Task1.cpp  Task1.h  Task2.cpp  Task2.h  Task3.cpp  Task3.h
Example/Utils/: ConditionalDebug.cpp  ConditionalDebug.h  Exceptions.h  FileHolder.cpp  FileHolder.h  FlagClass.h
Src/DataTypes/: TaskID.h  ThreadID.h
Src/Task/: Task.cpp  Task.h
Src/Thread/: CurrentThread.cpp  CurrentThread.h  Thread.cpp  Thread.h
